news server, apiGataway have been added
