# SkillFactory_APIGateway/internal/models/models.go
@@ -1,0 +1,9 @@
+package models
+
+type Comments struct {
+	ID              int32   `json:"ID"`
+	NewsID          int32   `json:"NewsID"`
+	ParentCommentID *int    `json:"ParentCommentID"`
+	Content         string  `json:"Content"`
+	CreatedAt       *string `json:"CreatedAt"`
+}
