# SkillFactory_APIGateway/swagger.yaml
@@ -15,6 +15,21 @@ tags:
 paths:
   /comments:
 
+    get:
+      description: Get all comments.
+      operationId: getAllComments
+      tags:
+        - comments
+      responses:
+        '200':
+          description: A list of comments
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Comment'
+
     post:
       description: Create comment.
       operationId: createComment
@@ -42,6 +57,26 @@ paths:
 
 components:
   schemas:
+    Comment:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: ID of the comment
+        news_id:
+          type: integer
+          description: ID of the associated news item
+        parent_comment_id:
+          type: integer
+          description: ID of the parent comment (if any)
+        content:
+          type: string
+          description: Content of the comment
+      required:
+        - id 
+        - news_id
+        - content
+
     CreateComment:
       type: object
       properties:
@@ -58,4 +93,3 @@ components:
       required:
         - news_id
         - content
-
